--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ cache-ovm
 
 l2geth/build/bin
 packages/contracts/deployments/custom
+packages/contracts/coverage/
+packages/contracts/coverage.json
 
 packages/data-transport-layer/db
 
