--- a/ops/docker/Dockerfile.monorepo
+++ b/ops/docker/Dockerfile.monorepo
@@ -31,6 +31,7 @@ COPY packages/contracts/package.json ./packages/contracts/package.json
 COPY packages/data-transport-layer/package.json ./packages/data-transport-layer/package.json
 COPY packages/batch-submitter/package.json ./packages/batch-submitter/package.json
 COPY packages/message-relayer/package.json ./packages/message-relayer/package.json
+COPY integration-tests/package.json ./integration-tests/package.json
 
 RUN yarn install --frozen-lockfile
 
@@ -49,6 +50,7 @@ COPY --from=builder /optimism/packages ./packages
 COPY *.json yarn.lock ./
 # copy over the source
 COPY ./packages ./packages
+COPY ./integration-tests ./integration-tests
 # copy over solc to save time building (35+ seconds vs not doing this step)
 COPY --from=downloader solc /root/.cache/hardhat-nodejs/compilers/linux-amd64/solc-linux-amd64-v0.7.6+commit.7338295f
 COPY --from=downloader ovm-solc /root/.cache/hardhat-nodejs/compilers/ovm/0.7.6.js
