--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,22 +34,9 @@ jobs:
         working-directory: ./ops
         run: ./scripts/build-ci.sh
 
-      - name: Bring the stack up and wait for the sequencer to be ready
+      - name: Bring the stack up and run the tests
         working-directory: ./ops
-        run: docker-compose up -d && ./scripts/wait-for-sequencer.sh
-
-      - name: Run the integration tests
-        working-directory: ./integration-tests
-        run: |
-            yarn build:contracts
-            yarn build:contracts:ovm
-            yarn test:integration
-        env:
-          FORCE_COLOR: 1
-          ENABLE_GAS_REPORT: 1
-
-      - name: Print gas report
-        run: cat integration-tests/gas-report.txt
+        run: docker-compose up --scale integration_tests=1
 
       # Examples Tests
       - name: Test & deploy hardhat-example on hardhat (regression)
