--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -53,6 +53,7 @@
     "glob": "^7.1.6"
   },
   "devDependencies": {
+    "@codechecks/client": "^0.1.10",
     "@eth-optimism/hardhat-ovm": "^0.1.0",
     "@eth-optimism/smock": "^1.1.1",
     "@nomiclabs/hardhat-ethers": "^2.0.1",
